# biocomp-tools

./: .gitignore  PRE_RELEASE_AUDIT.md  README.md  conftest.py  pyproject.toml
biocomp-tools/: common.py  parse_xpdir_to_db.py  plot_data.py  predict.py  train.py
biocomptools/: 2  __init__.py  async_logger_handler.py  async_logger_handler_v2.py  circuitplot.py  common.py  constants.py  design_hyperopt.py  download_mlflow.py  history_db.py  hyperopt_analysis.py  libupdate.py  logger_dispatch.py  logger_history.py  logger_runner.py  logging_config.py  make_video.py  mlflowlogger.py  model_prepare.py  modelmodel.py  new_plot_data.py  old_plotdata.py  old_train.py  optimtools.py  optuna_hyperopt.py  parse_to_db.py  parse_xpdir_to_db.py  plot.py  plot_data.py  plot_jobs.py  plot_manual.py  predict.py  run_design.py  run_eval.py  run_replay.py  run_training.py  step_history_triage.py  step_writer.py  test_dataset.py  train.py  (+7 more)
biocomptools/archive/: collect_static.py  extract.py  render_pdf.py
biocomptools/configs/: default.yaml  default_data_config.yaml  empty_plot_job.yaml  funnywords.yaml
biocomptools/configs/designs/: all_networks.yaml  design_recipes.py  networks.py  original_python_prototype.py  three.yaml  twoandone.yaml  twoandoneskip.yaml
biocomptools/configs/figure_maker/: dimension_dependent_figure.yaml  test.py
biocomptools/configs/plot_config/: cube_view_v1.yaml  default_plotconf.yaml  default_plotconf_v2.yaml  default_rcparams.yaml
biocomptools/configs/plots/: autofig.yml  autofig_combined.yml  autofig_data.yml  autofig_pred_combined.yml  autoplot.yml  simpleplot.yml
biocomptools/configs/plotting/: plotting_config.yaml
biocomptools/configs/rescaler/: EBFP2_compressed.yaml
biocomptools/configs/themes/: card_diagram_style.yaml  genetic_schematic.yaml  network_diagram.yaml
biocomptools/docs/: plot_class_diagram.uml  plot_method_diagram.uml
biocomptools/hyperopt/: __init__.py  base.py  loggers.py  samplers.py  training_logger.py  validation.py
biocomptools/jeanplot_panels/: __init__.py  activations.py  benchmark.py  biocomp_figure_adapter.py  blurb.py  circuit.py  data.py  design.py  empty.py  fluo.py  heatmap.py  inner_nodes.py  latent_density.py  mvp_network.py  network_diagram.py  pipelines.py  quantile.py  row_composer.py  shapley.py  uorf_matrix.py  voxel.py
biocomptools/jeanplot_panels/tests/: test_genetic_schematic_theme.py  test_legacy_deprecation.py  test_panels_smoke.py  test_paper_composition.py  test_row_composer.py
biocomptools/tests/: _dev_training.py  test_actual_loggers_e2e.py  test_async_logger_e2e.py  test_design_card_logger.py  test_design_commit_consistency.py  test_design_diagnostic_logger.py  test_design_heatmap_logger.py  test_design_logged_vs_committed.py  test_design_reproduction.py  test_design_results.py  test_design_selection.py  test_figuremakers.py  test_grid_stats_subsample.py  test_history_db.py  test_history_db_v2.py  test_hyperopt_integration.py  test_logger_dispatch.py  test_logger_runner.py  test_logger_scheduling.py  test_mvp_data.py  test_network_diagram_text.py  test_networkprediction.py  test_nrmse_metrics.py  test_plot_config_rescaler.py  test_quantile_coverage_metrics.py  test_step_history_triage.py  test_step_writer.py  test_training.py  test_training_set_helpers.py  test_tuner.py  test_tuner_losses.py  test_vmap_trials.py  test_write_replay_e2e.py
biocomptools/toollib/: _bbox_subfig.py  commandrunner.py  common.py  config.py  configutils.py  constants.py  database.py  dataquality.py  datasources.py  design_data.py  design_eval.py  design_pipeline.py  design_results.py  design_selection.py  designutils.py  figuremakers.py  hashutils.py  inheritable.py  interactive_link.py  merge.py  metric_utils.py  models.py  models_sqlalchemy.py  modelselector.py  networkprediction.py  networkselector.py  old_datasources.py  old_figuremakers.py  old_inheritable.py  old_plot.py  old_resolvable.py  overlays.py  pickle_utils.py  plot.py  plot_old_v2.py  replicate_metrics.py  resolvable.py  sample_efficiency.py  stackviz.py  types.py  (+3 more)
biocomptools/toollib/figuremakers/: _jeanplot_canvas.py  activation_reference.py  benchmarkutils.py  bimodal_partition.py  blurbpanel.py  circuitadapter.py  circuitgallery.py  datasetsummary.py  designutils.py  ern_diff_density.py  geneticcircuit.py  innernodes.py  innernodes_old.py  latent_projection_density.py  measuredvspredicted.py  network_adapter.py  networkdiagram.py  old_uorfmatrixfigure.py  quantilecoverage.py  recipepredictutils.py  scatter3d.py  smoothvoxel.py  targetpredictutils.py  uorfmatrixfigure.py
biocomptools/toollib/figuremakers_/: uorfmatrixfigure.py
biocomptools/toollib/loggers/: base_metrics_logger.py  checkpointlogger.py  (+24 more)
biocomptools/tuner/: __init__.py  api.py  param_schema.py  session.py
biocomptools/tuner-ui/: index.html  package.json  tailwind.config.js  vite.config.ts
biocomptools/tuner_app/: app.js  index.html  style.css
misc/: example_network_info.json
scripts/: migrate_recipe_input_order.py
tests/: inheritable_test.py  newplot.yml  oldplot.yml  plotpred.yml  resolvable_test.py
(+34 files in other folders)
