[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biocomptools"
version = "0.2.1"
description = "A set of tools and utils for the biocompiler."
authors = [{name = "Jean Disset", email = "jdisset@mit.edu"}]
readme = "README.md"
dependencies = [
	"biocomp",
	"jeanplot",
	"ray",
	"pympler",
	"memray",
	"multiprocess",
	"sqlmodel",
	"pydantic",
	"xxhash",
	"pyarrow",
	"gitpython",
	"mlflow",
	"rich",
	"plotext",
	"pynvml",
	"psutil",
	"gspread",
	"pypdf",
	"loky",
	"cloudpickle",
]


[project.scripts]
biocomp-plot= "biocomptools.plot:main"
biocomp-train= "biocomptools.run_training:main"
biocomp-design= "biocomptools.run_design:main"
biocomp-check = "biocomptools.test_dataset:main"
biocomp-updatedb = "biocomptools.update_biocompdb:main"
biocomp-updatepartsdb = "biocomptools.update_partsdb:main"
biocomp-update-partsdb = "biocomptools.update_partsdb:main"
biocomp-hyperopt = "biocomptools.optuna_hyperopt:main"
biocomp-circuitplot = "biocomptools.circuitplot:main"
biocomp-hyperopt-analysis = "biocomptools.hyperopt_analysis:main"

