[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportAny = false
reportImplicitOverride = false
reportUnusedCallResult = false
reportDeprecated = false
reportImportCycles = false
# Type errors to address incrementally
reportArgumentType = "warning"
reportAttributeAccessIssue = "warning"
reportOptionalMemberAccess = "warning"
reportIndexIssue = "warning"
reportOptionalSubscript = "warning"
reportGeneralTypeIssues = "warning"
reportOperatorIssue = "warning"
reportReturnType = "warning"
reportAssignmentType = "warning"
reportCallIssue = "warning"
reportOptionalIterable = "warning"
reportOptionalCall = "warning"
reportPrivateImportUsage = "warning"
reportInvalidTypeForm = "warning"
reportOptionalOperand = "warning"
reportRedeclaration = "warning"

[tool.ty.rules]
# Type errors to address incrementally - ignore for now
invalid-argument-type = "ignore"
not-subscriptable = "ignore"
unresolved-attribute = "ignore"
unsupported-operator = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
invalid-parameter-default = "ignore"
unresolved-import = "ignore"
invalid-type-form = "ignore"
not-iterable = "ignore"
no-matching-overload = "ignore"
call-non-callable = "ignore"
unknown-argument = "ignore"
invalid-method-override = "ignore"
parameter-already-assigned = "ignore"
missing-argument = "ignore"
invalid-key = "ignore"
index-out-of-bounds = "ignore"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "W"]
ignore = ["E741", "E501", "B023"]

[project]
name = "biocomptools"
version = "0.2.1"
description = "A set of tools and utils for the biocompiler."
authors = [{name = "Jean Disset", email = "jdisset@mit.edu"}]
readme = "README.md"
dependencies = [
	"biocomp",
	"jeanplot",
	"ray",
	"pympler",
	"memray",
	"multiprocess",
	"sqlmodel",
	"pydantic",
	"xxhash",
	"pyarrow",
	"gitpython",
	"mlflow",
	"rich",
	"plotext",
	"pynvml",
	"psutil",
	"gspread",
	"pypdf",
	"loky",
	"cloudpickle",
	"fastapi",
	"uvicorn",
]


[project.scripts]
biocomp-plot= "biocomptools.plot:main"
biocomp-train= "biocomptools.run_training:main"
biocomp-design= "biocomptools.run_design:main"
biocomp-check = "biocomptools.test_dataset:main"
biocomp-updatedb = "biocomptools.update_biocompdb:main"
biocomp-hyperopt = "biocomptools.optuna_hyperopt:main"
biocomp-design-hyperopt = "biocomptools.design_hyperopt:main"
biocomp-circuitplot = "biocomptools.circuitplot:main"
biocomp-hyperopt-analysis = "biocomptools.hyperopt_analysis:main"
biocomp-eval = "biocomptools.run_eval:main"
biocomp-model-prepare = "biocomptools.model_prepare:main"
biocomp-replay = "biocomptools.run_replay:main"
biocomp-tuner = "biocomptools.tuner.api:main"
biocomp-interactive-link = "biocomptools.toollib.interactive_link:main"

